Add further documentation

--- a/src/r/cluster_analysis.Rmd
+++ b/src/r/cluster_analysis.Rmd
@@ -33,12 +33,15 @@ library(ReactomeGSA)
 # Analyze Enriched Reactome Metabolic Pathways
 
 ## Overrepresentation analysis
-Now, let's get the enriched metabolic pathways.
+Now, let's get the enriched metabolic pathways. First compute clusters.
 ```{r}
 gsva_result = analyse_sc_clusters(neutrophils, 
                                   verbose=TRUE)
 pathway_expression = pathways(gsva_result)
+```
 
+Now let's the differentially expressed metabolic pathways.
+```{r}
 # find the maximum differently expressed pathway
 max_difference = do.call(rbind, apply(pathway_expression, 1, function(row) {
     values = as.numeric(row[2:length(row)])
@@ -48,11 +51,23 @@ max_difference = do.call(rbind, apply(pathway_expression, 1, function(row) {
 max_difference$diff = max_difference$max - max_difference$min
 
 # sort based on the difference
-max_difference <- max_difference[order(max_difference$diff, decreasing = T), ]
-
+max_difference = max_difference[order(max_difference$diff, decreasing = T), ]
 head(max_difference)
-plot_gsva_pathway(gsva_result, pathway_id = rownames(max_difference)[2])
-plot_gsva_heatmap(gsva_result, max_pathways = 15, margins = c(6,20))
+```
+
+Plot barplots of Reactome pathway enrichments for each cluster.
+```{r}
+plot_gsva_pathway(gsva_result,
+                  pathway_id=rownames(max_difference)[2])
+```
+
+Plot clustergram of Reactome annotations.
+```{r}
+plot_gsva_heatmap(gsva_result, 
+                  max_pathways=15, 
+                  margins=c(6,20)) #+
+  #labs(x="Clusters", 
+  #     y="Reactome Annotations")
 ```
 
 
