--- a/src/r/data_preprocessing.Rmd
+++ b/src/r/data_preprocessing.Rmd
@@ -26,7 +26,7 @@ library(reticulate)
 #install.packages('readxl')
 library(readxl)
 
-install.packages('sctransform')
+#install.packages('sctransform')
 library(sctransform)
 ```
 
@@ -42,9 +42,30 @@ This code block does the following with the lung dataset:
 Note that there were cell-type annotations in the meta data. I used those for visualization.
 ```{r}
 rm(list=ls())
-load("C:/Users/scott/Data/scRNASeq/shea/lung.robj", verbose=TRUE)
+#load("C:/Users/scott/Data/scRNASeq/shea/lung.robj", verbose=TRUE)
+load("D:/Data/scRNASeq/shea/lung.robj", verbose=TRUE)
+
 orig.ident = lung@active.ident
 ```
+
+# Analyze the data distribution
+We'll analyze the underlying data distribution. Additionally, we'll perform the following data preprocessing steps:
+  * Remove genes with a library size less than 250
+  * Remove cells with no gene expression
+  * Remove cells that are not expressed
+```{r}
+
+data_preprocessing = function(seurat_obj, 
+                              min_library_size=250,
+                              min_total_expr=1,
+                              min_no_of_cells=5){
+  
+  seurat_obj = subset(seurat_obj, subset = nCount_RNA >= min_library_size)
+  
+}
+```
+
+
 
 # 3. Visualize some QA/QC plots
 Let's now visualize some global metrics of our data.
